--- a/flask_app/templates/films_list.html
+++ b/flask_app/templates/films_list.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/static/css/films_list.css">
   </head>
 
   <body>
@@ -28,8 +28,12 @@
 
     <div class="b-container container">
       {% for film in films %}
-      <div class="b-film">
+      <div class="b-film b-film_boarded">
+        <div class="b-film__image">
+          <img class="b-image" src="{{  film.image  }}">
+        </div>
         <div class="b-film__title">{{ film.title }}</div>
+        <div class="b-film__rating">{{  film.rating  }}</div>
         <div class="b-film__cinemas">{{ film.count_cinema }}</div>
       </div>
       {% endfor %}
